plugins {
	id 'java'
	id 'org.springframework.boot' version '2.7.9'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'gdsc.binary-ho'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '11'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
	all {
		exclude group: "org.springframework.boot", module: "spring-boot-starter-logging"
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	/* JWT */
	implementation 'io.jsonwebtoken:jjwt:0.9.1'
	//	implementation 'com.auth0:java-jwt:3.10.3'

	/* DB */
	implementation 'org.postgresql:postgresql'
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	runtimeOnly 'com.h2database:h2'

	/* Security */
	testImplementation 'org.springframework.security:spring-security-test'
	implementation 'org.springframework.boot:spring-boot-starter-security'

	/* Lombok */
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	testCompileOnly 'org.projectlombok:lombok'
	testAnnotationProcessor 'org.projectlombok:lombok'

	/* SMTP */
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	/* log4j */
	implementation("org.springframework.boot:spring-boot-starter-log4j2")

	/* swagger */
	implementation("org.springdoc:springdoc-openapi-ui:1.6.11")
}

tasks.named('test') {
	useJUnitPlatform()
}
